internal/conditionalParser/conditionalexpression_parser.go
// Code generated from conditionalexpression.g4 by ANTLR 4.13.2. DO NOT EDIT.

package conditionalparser // conditionalexpression
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type conditionalexpressionParser struct {
	*antlr.BaseParser
}

var ConditionalexpressionParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func conditionalexpressionParserInit() {
	staticData := &ConditionalexpressionParserStaticData
	staticData.LiteralNames = []string{
		"", "'+'", "'-'", "", "'Member_of'", "'Not_Member_of'", "'Member_of_Any'",
		"'Not_Member_of_Any'", "'Device_Member_of'", "'Device_Member_of_Any'",
		"'Not_Device_Member_of'", "'Not_Device_Member_of_Any'", "'Exists'",
		"'Not_exists'", "'Contains'", "'Not_Contains'", "'Any_of'", "'Not_Any_of'",
		"'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='",
		"'('", "')'", "'{'", "'}'", "','", "'.'", "'@user.'", "'@device.'",
		"'@resource.'", "", "'SID('",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "WHITESPACE", "MEMBER_OF", "NOT_MEMBER_OF", "MEMBER_OF_ANY",
		"NOT_MEMBER_OF_ANY", "DEVICE_MEMBER_OF", "DEVICE_MEMBER_OF_ANY", "NOT_DEVICE_MEMBER_OF",
		"NOT_DEVICE_MEMBER_OF_ANY", "EXISTS", "NOT_EXISTS", "CONTAINS", "NOT_CONTAINS",
		"ANY_OF", "NOT_ANY_OF", "AND", "OR", "NOT", "EQ", "NEQ", "LT", "LTE",
		"GT", "GTE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "DOT",
		"USER_PREFIX", "DEVICE_PREFIX", "RESOURCE_PREFIX", "SID_TOKEN", "SID_START",
		"HEX_INTEGER", "OCTAL_INTEGER", "DECIMAL_INTEGER", "STRING_LITERAL",
		"OCTET_STRING", "SID_FORMAT", "IDENTIFIER", "LIT_CHAR", "ANY_CHAR",
	}
	staticData.RuleNames = []string{
		"condExpr", "expr", "superTerm", "factor", "term", "memberofOp", "existsOp",
		"relOp", "relOp2", "containsOp", "anyofOp", "attrName", "simpleAttrName",
		"prefixedAttrName", "extendedIdentifier", "sidArray", "literalSID",
		"valueArray", "value", "integerValue", "sidString",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// conditionalexpressionParserInit initializes any static state used to implement conditionalexpressionParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewconditionalexpressionParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ConditionalexpressionParserInit() {
	staticData := &ConditionalexpressionParserStaticData
	staticData.once.Do(conditionalexpressionParserInit)
}

// NewconditionalexpressionParser produces a new parser instance for the optional input antlr.TokenStream.
func NewconditionalexpressionParser(input antlr.TokenStream) *conditionalexpressionParser {
	ConditionalexpressionParserInit()
	this := new(conditionalexpressionParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ConditionalexpressionParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "conditionalexpression.g4"

	return this
}

// conditionalexpressionParser tokens.
const (
	conditionalexpressionParserEOF                      = antlr.TokenEOF
	conditionalexpressionParserT__0                     = 1
	conditionalexpressionParserT__1                     = 2
	conditionalexpressionParserWHITESPACE               = 3
	conditionalexpressionParserMEMBER_OF                = 4
	conditionalexpressionParserNOT_MEMBER_OF            = 5
	conditionalexpressionParserMEMBER_OF_ANY            = 6
	conditionalexpressionParserNOT_MEMBER_OF_ANY        = 7
	conditionalexpressionParserDEVICE_MEMBER_OF         = 8
	conditionalexpressionParserDEVICE_MEMBER_OF_ANY     = 9
	conditionalexpressionParserNOT_DEVICE_MEMBER_OF     = 10
	conditionalexpressionParserNOT_DEVICE_MEMBER_OF_ANY = 11
	conditionalexpressionParserEXISTS                   = 12
	conditionalexpressionParserNOT_EXISTS               = 13
	conditionalexpressionParserCONTAINS                 = 14
	conditionalexpressionParserNOT_CONTAINS             = 15
	conditionalexpressionParserANY_OF                   = 16
	conditionalexpressionParserNOT_ANY_OF               = 17
	conditionalexpressionParserAND                      = 18
	conditionalexpressionParserOR                       = 19
	conditionalexpressionParserNOT                      = 20
	conditionalexpressionParserEQ                       = 21
	conditionalexpressionParserNEQ                      = 22
	conditionalexpressionParserLT                       = 23
	conditionalexpressionParserLTE                      = 24
	conditionalexpressionParserGT                       = 25
	conditionalexpressionParserGTE                      = 26
	conditionalexpressionParserLPAREN                   = 27
	conditionalexpressionParserRPAREN                   = 28
	conditionalexpressionParserLBRACE                   = 29
	conditionalexpressionParserRBRACE                   = 30
	conditionalexpressionParserCOMMA                    = 31
	conditionalexpressionParserDOT                      = 32
	conditionalexpressionParserUSER_PREFIX              = 33
	conditionalexpressionParserDEVICE_PREFIX            = 34
	conditionalexpressionParserRESOURCE_PREFIX          = 35
	conditionalexpressionParserSID_TOKEN                = 36
	conditionalexpressionParserSID_START                = 37
	conditionalexpressionParserHEX_INTEGER              = 38
	conditionalexpressionParserOCTAL_INTEGER            = 39
	conditionalexpressionParserDECIMAL_INTEGER          = 40
	conditionalexpressionParserSTRING_LITERAL           = 41
	conditionalexpressionParserOCTET_STRING             = 42
	conditionalexpressionParserSID_FORMAT               = 43
	conditionalexpressionParserIDENTIFIER               = 44
	conditionalexpressionParserLIT_CHAR                 = 45
	conditionalexpressionParserANY_CHAR                 = 46
)

// conditionalexpressionParser rules.
const (
	conditionalexpressionParserRULE_condExpr           = 0
	conditionalexpressionParserRULE_expr               = 1
	conditionalexpressionParserRULE_superTerm          = 2
	conditionalexpressionParserRULE_factor             = 3
	conditionalexpressionParserRULE_term               = 4
	conditionalexpressionParserRULE_memberofOp         = 5
	conditionalexpressionParserRULE_existsOp           = 6
	conditionalexpressionParserRULE_relOp              = 7
	conditionalexpressionParserRULE_relOp2             = 8
	conditionalexpressionParserRULE_containsOp         = 9
	conditionalexpressionParserRULE_anyofOp            = 10
	conditionalexpressionParserRULE_attrName           = 11
	conditionalexpressionParserRULE_simpleAttrName     = 12
	conditionalexpressionParserRULE_prefixedAttrName   = 13
	conditionalexpressionParserRULE_extendedIdentifier = 14
	conditionalexpressionParserRULE_sidArray           = 15
	conditionalexpressionParserRULE_literalSID         = 16
	conditionalexpressionParserRULE_valueArray         = 17
	conditionalexpressionParserRULE_value              = 18
	conditionalexpressionParserRULE_integerValue       = 19
	conditionalexpressionParserRULE_sidString          = 20
)

// ICondExprContext is an interface to support dynamic dispatch.
type ICondExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expr() IExprContext
	EOF() antlr.TerminalNode

	// IsCondExprContext differentiates from other interfaces.
	IsCondExprContext()
}

type CondExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCondExprContext() *CondExprContext {
	var p = new(CondExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_condExpr
	return p
}

func InitEmptyCondExprContext(p *CondExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_condExpr
}

func (*CondExprContext) IsCondExprContext() {}

func NewCondExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CondExprContext {
	var p = new(CondExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = conditionalexpressionParserRULE_condExpr

	return p
}

func (s *CondExprContext) GetParser() antlr.Parser { return s.parser }

func (s *CondExprContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *CondExprContext) EOF() antlr.TerminalNode {
	return s.GetToken(conditionalexpressionParserEOF, 0)
}

func (s *CondExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CondExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CondExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.EnterCondExpr(s)
	}
}

func (s *CondExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.ExitCondExpr(s)
	}
}

func (p *conditionalexpressionParser) CondExpr() (localctx ICondExprContext) {
	localctx = NewCondExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, conditionalexpressionParserRULE_condExpr)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Expr()
	}
	{
		p.SetState(43)
		p.Match(conditionalexpressionParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExprContext is an interface to support dynamic dispatch.
type IExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSuperTerm() []ISuperTermContext
	SuperTerm(i int) ISuperTermContext
	AllOR() []antlr.TerminalNode
	OR(i int) antlr.TerminalNode

	// IsExprContext differentiates from other interfaces.
	IsExprContext()
}

type ExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExprContext() *ExprContext {
	var p = new(ExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_expr
	return p
}

func InitEmptyExprContext(p *ExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_expr
}

func (*ExprContext) IsExprContext() {}

func NewExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExprContext {
	var p = new(ExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = conditionalexpressionParserRULE_expr

	return p
}

func (s *ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ExprContext) AllSuperTerm() []ISuperTermContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISuperTermContext); ok {
			len++
		}
	}

	tst := make([]ISuperTermContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISuperTermContext); ok {
			tst[i] = t.(ISuperTermContext)
			i++
		}
	}

	return tst
}

func (s *ExprContext) SuperTerm(i int) ISuperTermContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISuperTermContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISuperTermContext)
}

func (s *ExprContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(conditionalexpressionParserOR)
}

func (s *ExprContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(conditionalexpressionParserOR, i)
}

func (s *ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.EnterExpr(s)
	}
}

func (s *ExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.ExitExpr(s)
	}
}

func (p *conditionalexpressionParser) Expr() (localctx IExprContext) {
	localctx = NewExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, conditionalexpressionParserRULE_expr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.SuperTerm()
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == conditionalexpressionParserOR {
		{
			p.SetState(46)
			p.Match(conditionalexpressionParserOR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(47)
			p.SuperTerm()
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISuperTermContext is an interface to support dynamic dispatch.
type ISuperTermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllFactor() []IFactorContext
	Factor(i int) IFactorContext
	AllAND() []antlr.TerminalNode
	AND(i int) antlr.TerminalNode

	// IsSuperTermContext differentiates from other interfaces.
	IsSuperTermContext()
}

type SuperTermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySuperTermContext() *SuperTermContext {
	var p = new(SuperTermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_superTerm
	return p
}

func InitEmptySuperTermContext(p *SuperTermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_superTerm
}

func (*SuperTermContext) IsSuperTermContext() {}

func NewSuperTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SuperTermContext {
	var p = new(SuperTermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = conditionalexpressionParserRULE_superTerm

	return p
}

func (s *SuperTermContext) GetParser() antlr.Parser { return s.parser }

func (s *SuperTermContext) AllFactor() []IFactorContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFactorContext); ok {
			len++
		}
	}

	tst := make([]IFactorContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFactorContext); ok {
			tst[i] = t.(IFactorContext)
			i++
		}
	}

	return tst
}

func (s *SuperTermContext) Factor(i int) IFactorContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFactorContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFactorContext)
}

func (s *SuperTermContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(conditionalexpressionParserAND)
}

func (s *SuperTermContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(conditionalexpressionParserAND, i)
}

func (s *SuperTermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SuperTermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SuperTermContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.EnterSuperTerm(s)
	}
}

func (s *SuperTermContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.ExitSuperTerm(s)
	}
}

func (p *conditionalexpressionParser) SuperTerm() (localctx ISuperTermContext) {
	localctx = NewSuperTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, conditionalexpressionParserRULE_superTerm)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Factor()
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == conditionalexpressionParserAND {
		{
			p.SetState(54)
			p.Match(conditionalexpressionParserAND)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(55)
			p.Factor()
		}

		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFactorContext is an interface to support dynamic dispatch.
type IFactorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Term() ITermContext
	LPAREN() antlr.TerminalNode
	Expr() IExprContext
	RPAREN() antlr.TerminalNode
	NOT() antlr.TerminalNode
	Factor() IFactorContext

	// IsFactorContext differentiates from other interfaces.
	IsFactorContext()
}

type FactorContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFactorContext() *FactorContext {
	var p = new(FactorContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_factor
	return p
}

func InitEmptyFactorContext(p *FactorContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_factor
}

func (*FactorContext) IsFactorContext() {}

func NewFactorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FactorContext {
	var p = new(FactorContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = conditionalexpressionParserRULE_factor

	return p
}

func (s *FactorContext) GetParser() antlr.Parser { return s.parser }

func (s *FactorContext) Term() ITermContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITermContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITermContext)
}

func (s *FactorContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(conditionalexpressionParserLPAREN, 0)
}

func (s *FactorContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *FactorContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(conditionalexpressionParserRPAREN, 0)
}

func (s *FactorContext) NOT() antlr.TerminalNode {
	return s.GetToken(conditionalexpressionParserNOT, 0)
}

func (s *FactorContext) Factor() IFactorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFactorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFactorContext)
}

func (s *FactorContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FactorContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FactorContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.EnterFactor(s)
	}
}

func (s *FactorContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(conditionalexpressionListener); ok {
		listenerT.ExitFactor(s)
	}
}

func (p *conditionalexpressionParser) Factor() (localctx IFactorContext) {
	localctx = NewFactorContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, conditionalexpressionParserRULE_factor)
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case conditionalexpressionParserMEMBER_OF, conditionalexpressionParserNOT_MEMBER_OF, conditionalexpressionParserMEMBER_OF_ANY, conditionalexpressionParserNOT_MEMBER_OF_ANY, conditionalexpressionParserDEVICE_MEMBER_OF, conditionalexpressionParserDEVICE_MEMBER_OF_ANY, conditionalexpressionParserNOT_DEVICE_MEMBER_OF, conditionalexpressionParserNOT_DEVICE_MEMBER_OF_ANY, conditionalexpressionParserEXISTS, conditionalexpressionParserNOT_EXISTS, conditionalexpressionParserUSER_PREFIX, conditionalexpressionParserDEVICE_PREFIX, conditionalexpressionParserRESOURCE_PREFIX, conditionalexpressionParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(61)
			p.Term()
		}

	case conditionalexpressionParserLPAREN:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(62)
			p.Match(conditionalexpressionParserLPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(63)
			p.Expr()
		}
		{
			p.SetState(64)
			p.Match(conditionalexpressionParserRPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case conditionalexpressionParserNOT:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(66)
			p.Match(conditionalexpressionParserNOT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(67)
			p.Factor()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITermContext is an interface to support dynamic dispatch.
type ITermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MemberofOp() IMemberofOpContext
	ExistsOp() IExistsOpContext
	RelOp() IRelOpContext
	RelOp2() IRelOp2Context
	ContainsOp() IContainsOpContext
	AnyofOp() IAnyofOpContext
	AttrName() IAttrNameContext

	// IsTermContext differentiates from other interfaces.
	IsTermContext()
}

type TermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTermContext() *TermContext {
	var p = new(TermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = conditionalexpressionParserRULE_term
	return p
}
